# backend_assignment

./: README.md  SCALABILITY.md
backend/: .env.example  .gitignore  gunicorn_conf.py  pyproject.toml  requirements.txt  test_cors.py
backend/app/: main.py
backend/app/core/: config.py  dependencies.py  security.py
backend/app/db/: database.py  indexes.py
backend/app/models/: task.py  user.py
backend/app/routes/: __init__.py  auth.py  oauth.py  tasks.py
backend/app/schemas/: task.py  user.py
backend/app/services/: auth_service.py  task_service.py
frontend/: .env  package-lock.json  package.json
frontend/src/: App.jsx  main.jsx
frontend/src/api/: axios.js
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: Dashboard.jsx  Login.jsx  Register.jsx
